@@ -1,6 +1,7 @@
 2011-12-13  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to bug #13428: pi1/captcha.php: PHP Fatal Error when called directly
+	* Added feature #32488: Require TYPO3 4.5 and PHP 5.3
 
 2011-12-12  Stanislas Rolland  <typo3@sjbr.ca>
 
